--- a/JEMAuto/test-output/old/Suite/methods-alphabetical.html
+++ b/JEMAuto/test-output/old/Suite/methods-alphabetical.html
@@ -1,18 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8c7c9b">  <td>21/07/12 09:20:22</td>   <td>0</td> <td title="&lt;&lt;Login.closeBrowser()[pri:0, instance:com.testcases.Login@c430e6c]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1585239756</td>   <td></td> </tr>
-<tr bgcolor="8c7c9b">  <td>21/07/12 09:20:05</td>   <td>-16215</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.fillContactData()[pri:0, instance:com.testcases.Login@c430e6c]">fillContactData</td> 
-  <td>main@1585239756</td>   <td></td> </tr>
-<tr bgcolor="8c7c9b">  <td>21/07/12 09:19:51</td>   <td>-30746</td> <td title="&gt;&gt;Login.launchBrowser()[pri:0, instance:com.testcases.Login@c430e6c]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1585239756</td>   <td></td> </tr>
-<tr bgcolor="8c7c9b">  <td>21/07/12 09:20:03</td>   <td>-18377</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Login.navigateURL()[pri:0, instance:com.testcases.Login@c430e6c]">&gt;&gt;navigateURL</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1585239756</td>   <td></td> </tr>
-<tr bgcolor="9aaf83">  <td>21/07/12 09:20:06</td>   <td>-15879</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FreeDayTrial.testMethod1()[pri:0, instance:com.testcases.FreeDayTrial@312aa7c]">testMethod1</td> 
-  <td>main@1585239756</td>   <td></td> </tr>
-<tr bgcolor="9aaf83">  <td>21/07/12 09:20:21</td>   <td>-408</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FreeDayTrial.testMethod2()[pri:0, instance:com.testcases.FreeDayTrial@312aa7c]">testMethod2</td> 
-  <td>main@1585239756</td>   <td></td> </tr>
-<tr bgcolor="9aaf83">  <td>21/07/12 09:20:21</td>   <td>-404</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FreeDayTrial.testMethod3()[pri:0, instance:com.testcases.FreeDayTrial@312aa7c]">testMethod3</td> 
-  <td>main@1585239756</td>   <td></td> </tr>
+<tr bgcolor="b2816b">  <td>21/07/24 11:24:32</td>   <td>0</td> <td title="&lt;&lt;Login.closeBrowser()[pri:0, instance:com.testcases.Login@645aa696]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1944798106</td>   <td></td> </tr>
+<tr bgcolor="b2816b">  <td>21/07/24 11:24:27</td>   <td>-4360</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.fillContactData()[pri:0, instance:com.testcases.Login@645aa696]">fillContactData</td> 
+  <td>main@1944798106</td>   <td></td> </tr>
+<tr bgcolor="b2816b">  <td>21/07/24 11:24:06</td>   <td>-25790</td> <td title="&gt;&gt;Login.launchBrowser()[pri:0, instance:com.testcases.Login@645aa696]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1944798106</td>   <td></td> </tr>
+<tr bgcolor="b2816b">  <td>21/07/24 11:24:24</td>   <td>-7122</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Login.navigateURL()[pri:0, instance:com.testcases.Login@645aa696]">&gt;&gt;navigateURL</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1944798106</td>   <td></td> </tr>
+<tr bgcolor="6f6761">  <td>21/07/24 11:24:28</td>   <td>-3880</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FreeDayTrial.testMethod1()[pri:0, instance:com.testcases.FreeDayTrial@6caf0677]">testMethod1</td> 
+  <td>main@1944798106</td>   <td></td> </tr>
 </table>
