--- a/JEMAuto/test-output/old/Suite/methods.html
+++ b/JEMAuto/test-output/old/Suite/methods.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b2816b">  <td>21/07/24 11:24:06</td>   <td>0</td> <td title="&gt;&gt;Login.launchBrowser()[pri:0, instance:com.testcases.Login@645aa696]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1944798106</td>   <td></td> </tr>
-<tr bgcolor="b2816b">  <td>21/07/24 11:24:24</td>   <td>18668</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Login.navigateURL()[pri:0, instance:com.testcases.Login@645aa696]">&gt;&gt;navigateURL</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1944798106</td>   <td></td> </tr>
-<tr bgcolor="b2816b">  <td>21/07/24 11:24:27</td>   <td>21430</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.fillContactData()[pri:0, instance:com.testcases.Login@645aa696]">fillContactData</td> 
-  <td>main@1944798106</td>   <td></td> </tr>
-<tr bgcolor="6f6761">  <td>21/07/24 11:24:28</td>   <td>21910</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FreeDayTrial.testMethod1()[pri:0, instance:com.testcases.FreeDayTrial@6caf0677]">testMethod1</td> 
-  <td>main@1944798106</td>   <td></td> </tr>
-<tr bgcolor="b2816b">  <td>21/07/24 11:24:32</td>   <td>25790</td> <td title="&lt;&lt;Login.closeBrowser()[pri:0, instance:com.testcases.Login@645aa696]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1944798106</td>   <td></td> </tr>
+<tr bgcolor="8c7c9b">  <td>21/07/24 14:28:31</td>   <td>0</td> <td title="&gt;&gt;Login.launchBrowser()[pri:0, instance:com.testcases.Login@4a8355dd]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1605851606</td>   <td></td> </tr>
+<tr bgcolor="8c7c9b">  <td>21/07/24 14:29:04</td>   <td>33354</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Login.navigateURL()[pri:0, instance:com.testcases.Login@4a8355dd]">&gt;&gt;navigateURL</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1605851606</td>   <td></td> </tr>
+<tr bgcolor="8c7c9b">  <td>21/07/24 14:29:08</td>   <td>37374</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.fillContactData()[pri:0, instance:com.testcases.Login@4a8355dd]">fillContactData</td> 
+  <td>main@1605851606</td>   <td></td> </tr>
+<tr bgcolor="9aaf83">  <td>21/07/24 14:29:09</td>   <td>37919</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FreeDayTrial.testMethod1()[pri:0, instance:com.testcases.FreeDayTrial@4d0d9fe7]">testMethod1</td> 
+  <td>main@1605851606</td>   <td></td> </tr>
+<tr bgcolor="8c7c9b">  <td>21/07/24 14:29:14</td>   <td>42708</td> <td title="&lt;&lt;Login.closeBrowser()[pri:0, instance:com.testcases.Login@4a8355dd]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1605851606</td>   <td></td> </tr>
 </table>
